# lyrics-master

./: .gitignore  LICENSE  README.md  TASK_10.1_SUMMARY.md  TASK_11.1_SUMMARY.md  TASK_2_SUMMARY.md  TASK_3.1_SUMMARY.md  TASK_5.3_SUMMARY.md  TASK_6.1_SUMMARY.md  TASK_7.1_SUMMARY.md  TASK_8.1_SUMMARY.md  TASK_8.3_SUMMARY.md  The Blue Anthology 9_audio.json  build_config.yaml  debug_app_context.py  lyric_to_subtitle_app.spec  pyproject.toml  requirements-build.txt  test_build_config.py
.kiro/specs/lyric-to-subtitle-app/: requirements.md  tasks.md
.kiro/steering/: audio_separator.md  structure.md  tech.md  whisper.md
build_scripts/: build.py  build_linux.sh  build_macos.sh  create_desktop_file.sh
examples/: progress_widget_example.py  results_panel_example.py
karaoke_creator/: .gitignore  Build_Guide.md  CLIENT_SERVER_ARCHITECTURE.md  FAST_RENDERING_GUIDE.md  FIXES_APPLIED.md  IMAGE_AUDIO_GUIDE.md  IMPLEMENTATION_SUMMARY.md  MEMORY_OPTIMIZATION_GUIDE.md  SIMULTANEOUS_PROCESSING_GUIDE.md  TESTING_STEPS.md  app.js  debug-image-audio.html  index.html  package-lock.json  package.json  serve_client.js  start-image-audio-test.bat  start-image-audio-test.sh  styles.css  test-image-audio-upload.js  test-simple-upload.html  test_export.html  test_full_render.js  test_image_audio.html  test_progress.html  test_server_render.js  test_server_simple.js  test_subtitles.json
karaoke_creator/.kiro/steering/: product.md  structure.md  tech.md
karaoke_creator/server/: FONT_GUIDE.md  README.md  package-lock.json  package.json  server.js  setup-fonts.js  start-server.bat  start-server.sh
karaoke_creator/src/client/: ServerRenderer.js
karaoke_creator/src/core/: UnifiedTextRenderer.js  batch-processor.js  fixed-memory-renderer.js  gpu-renderer.js  memory-optimized-renderer.js  parallel-renderer.js  true-parallel-renderer.js
src/services/: __init__.py  audio_processor.py  bilingual_subtitle_service.py  error_handler.py  model_manager.py  speech_recognizer.py  subtitle_generator.py  translation_service.py  vocal_separator.py  vtt_exporter.py
src/ui/: first_run_wizard.py  main_window.py  options_panel.py
src/utils/: __init__.py
subtitle_tool/: BUILD.md  TASK_10.2_SUMMARY.md  TASK_3.2_SUMMARY.md  TASK_3_SUMMARY.md  TASK_4.1_SUMMARY.md  TASK_5.1_SUMMARY.md  TASK_5.2_SUMMARY.md  TASK_6.2_SUMMARY.md  TASK_7.2_SUMMARY.md  TASK_8.2_SUMMARY.md  TASK_8.4_SUMMARY.md  debug_import.py  requirements-dev.txt  requirements.txt  run_app.py  test_audio_separator_import.py  test_first_run_demo.py  test_models.py  test_vocal_separation.py
subtitle_tool/.kiro/steering/: product.md
subtitle_tool/build_scripts/: build_windows.bat
subtitle_tool/examples/: bilingual_subtitle_example.py  main_window_example.py  options_panel_example.py  translation_example.py
subtitle_tool/src/: __init__.py  main.py
subtitle_tool/src/services/: application_controller.py  ass_exporter.py  audio_file_service.py  batch_processor.py  interfaces.py  json_exporter.py  model_downloader.py  speech_recognizer.py  srt_exporter.py  vocal_separator.py
subtitle_tool/src/ui/: __init__.py  options_panel.py  progress_widget.py  results_panel.py
subtitle_tool/tests/: __init__.py
tests/test_integration/: test_ass_integration.py  test_batch_simple.py  test_complete_workflows.py  test_complete_workflows_fixed.py  test_end_to_end_workflows.py  test_model_management_integration.py  test_translation_integration.py  test_ui_workflows.py  test_ui_workflows_simple.py  test_vtt_json_integration.py
tests/test_services/: test_application_controller.py  test_ass_exporter.py  test_json_exporter.py  test_model_manager.py  test_speech_recognizer.py  test_translation_service.py
tests/test_ui/: test_first_run_wizard.py  test_options_panel.py
(+36 files in other folders)
